# OxidizeBot

./: Cargo.toml
bot/: Cargo.toml
bot/src/module/: song.rs
bot/src/player/: playback_future.rs
