[workspace]

default-members = ["bot"]
members = ["bot", "web"]
exclude = ["tools/builder"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
debug = true

[patch.crates-io]
runestick = { git = "https://github.com/rune-rs/rune", branch = "main" }
rune = { git = "https://github.com/rune-rs/rune", branch = "main" }
rune-modules = { git = "https://github.com/rune-rs/rune", branch = "main" }

warp = { git = "https://github.com/aknuds1/warp", branch = "chore/upgrade-tokio" }
irc = { git = "https://github.com/aatxe/irc", branch = "develop" }
